# planilhex

./: Dockerfile  PesoMédio.xlsm  README.md
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: bootstrap.py  config.py  db.py  deps.py  main.py  models.py  routes.py  schemas.py  security.py  spreadsheet.py
backend/scripts/: start.sh
frontend/: index.html  package.json
frontend/src/: main.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AdminTemplates.jsx  App.jsx  Operator.jsx
